--- a/main.css
+++ b/main.css
@@ -22,12 +22,14 @@ h1, h2, h3 {
     position: absolute;
     margin-top: 100px;
     width: 300px;
+    font-style: italic;
 }
 #str2 {
     position: absolute;
     margin-top: 100px;
     margin-left: 900px;
     width: 350px;
+    font-style: italic;
 }
 h4, h5 {
     color: purple;
